--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "license": "Apache-2.0",
   "repository": "openshift-assisted/assisted-ui-lib",
   "main": "dist/index.js",
-  "module": "dist/index.modern.js",
+  "module": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/src/index.d.ts",
   "engines": {
     "node": ">=12.16"
   },
   "scripts": {
-    "clean": "rm -rf dist/*",
+    "clean": "rimraf dist",
+    "esbuild:prod": "node ./scripts/esbuild/prod.js",
+    "esbuild:dev": "node ./scripts/esbuild/dev.js",
     "prebuild": "run-s clean test",
-    "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
+    "build": "run-s clean esbuild:prod",
+    "start": "run-s clean esbuild:dev",
     "start-assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
     "start-uhc-portal": "./scripts/start-uhc-portal.sh",
     "sync-to-ui": "./scripts/sync-dist.sh",
@@ -37,6 +39,7 @@
     "@patternfly/react-code-editor": "^4.2.92",
     "@patternfly/react-core": "^4.135.0",
     "@patternfly/react-icons": "^4.11.0",
+    "@patternfly/react-styles": "^4.12.5",
     "@patternfly/react-table": "^4.29.0",
     "@patternfly/react-tokens": "^4.12.0",
     "@reduxjs/toolkit": "^1.5",
@@ -85,6 +88,7 @@
     "cross-env": "^7.0.2",
     "dpdm": "^3.4.3",
     "env-cmd": "^10.1.0",
+    "esbuild": "^0.13.9",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-cypress": "^2.10.3",
@@ -92,11 +96,11 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "install-peers-cli": "^2.2.0",
-    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react-scripts": "^3.4.1",
     "redux-devtools-extension": "^2.13.8",
+    "rimraf": "^3.0.2",
     "sw2dts": "^2.6.3",
     "typescript": "^3.8.3"
   },
@@ -114,6 +118,7 @@
   "dependencies": {
     "axios-case-converter": "^0.8.1",
     "classnames": "^2.3.1",
+    "esbuild-plugin-d.ts": "^1.0.6",
     "file-saver": "^2.0.2",
     "filesize.js": "^2.0.0",
     "formik": "2.2.6",
