--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "start": "run-s clean esbuild:dev",
     "start-assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
     "start-uhc-portal": "./scripts/start-uhc-portal.sh",
-    "sync-to-ui": "./scripts/sync-dist.sh",
+    "sync-dist": "./scripts/sync-dist.sh",
     "prepare": "install-peers",
+    "test": "react-scripts test --env=jsdom",
     "test:type-check": "tsc --noEmit",
     "test:lint": "eslint --ext .js,.jsx,.ts,.tsx --color --max-warnings=0 ./src",
     "test:ci": "yarn test --watchAll=false --ci --runInBand",
     "test:circular": "dpdm --exit-code circular:1 --warning false --tree false src/index.ts",
-    "test": "react-scripts test --env=jsdom",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --color --fix ./src",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
     "update-api": "curl https://raw.githubusercontent.com/openshift/assisted-service/master/swagger.yaml > src/common/api/swagger.yaml",
@@ -126,36 +126,8 @@
     "sw2dts": "^2.6.3",
     "typescript": "^3.8.3"
   },
-  "peerDependencies": {
-    "@patternfly/react-code-editor": "^4.2.92",
-    "@patternfly/react-core": "^4.135.0",
-    "@patternfly/react-icons": "^4.11.0",
-    "@patternfly/react-table": "^4.29.0",
-    "@patternfly/react-tokens": "^4.12.0",
-    "@reduxjs/toolkit": "^1.5",
-    "@sentry/browser": "^5.9 || ^6.0",
-    "axios": ">=0.19.2 <1.0.0",
-    "i18next": "^20.4.0 || ^21.0",
-    "i18next-browser-languagedetector": "^6.1.2",
-    "lodash": "^4.17.15",
-    "react": "^16.14.0 || ^17.0",
-    "react-dom": "^16.13.1 || ^17.0",
-    "react-i18next": "^11.11.4",
-    "react-monaco-editor": "^0.43.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-tagsinput": "3.19.x",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "swr": ">=0.5.6 <2",
-    "uuid": "^8.1.0",
-    "yup": "^0.28.3"
-  },
   "files": [
-    "cim",
-    "ocm",
-    "common"
+    "dist"
   ],
   "keywords": [
     "react",
