--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/classnames": "^2.3.1",
+    "@types/faker": "^5.5.9",
     "@types/file-saver": "^2.0.1",
     "@types/human-date": "^1.4.0",
     "@types/humanize-plus": "^1.8.0",
@@ -110,6 +111,7 @@
     "eslint-plugin-testing-library": "^3.9.0",
     "faker": "^5.5.3",
     "install-peers-cli": "^2.2.0",
+    "msw": "^0.35.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react-scripts": "^4.0.3",
