--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/lodash": "^4.14.121",
     "@types/node": "^12.12.38",
     "@types/react-autosuggest": "^10.1.5",
+    "@types/react-measure": "^2.0.8",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-tagsinput": "^3.19.7",
@@ -147,6 +148,7 @@
     "is-in-subnet": "^3.1.0",
     "js-yaml": "^4.1.0",
     "prism-react-renderer": "^1.1.1",
+    "react-measure": "^2.5.2",
     "unique-names-generator": "^4.2.0"
   },
   "jest": {
