--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "prebuild": "run-s clean test",
     "build": "run-s clean esbuild:prod",
     "start": "run-s clean esbuild:dev",
-    "start-assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
-    "start-uhc-portal": "./scripts/start-uhc-portal.sh",
-    "sync-to-ui": "./scripts/sync-dist.sh",
+    "start:assisted-ui": "yarn --cwd ../assisted-ui start",
+    "start:uhc-portal": "yarn --cwd ../uhc-portal start",
+    "sync-dist": "./scripts/sync-dist.sh",
     "prepare": "install-peers",
     "test": "run-s test:circular test:lint test:type-check",
     "test:type-check": "tsc --noEmit",
